fix: footer jumps when sidebar opens

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -52,6 +52,13 @@ html[dark=''] {
 
 .off-canvas-content {
     box-shadow: none;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.flow {
+    flex: 1;
 }
 
 .off-canvas.position-left {
